Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Công nghệ là cơ hội nhưng áp lực nhà trường phải đổi mới chương trình",
+    "content": "Bài viết đề cập đến sự phát triển công nghệ như một cơ hội và đồng thời là áp lực đối với các nhà trường trong việc đổi mới chương trình đào tạo. Tọa đàm tổ chức tại Trường ĐH Hà Nội đã thảo luận về những thách thức và yêu cầu mới đối với nguồn nhân lực, nhấn mạnh tầm quan trọng của việc trang bị kiến thức và kỹ năng cho sinh viên để họ có thể thích nghi với thị trường lao động đang thay đổi. Ông Phạm Văn Hùng cũng nhấn mạnh rằng sự linh hoạt trong chương trình đào tạo và khả năng áp dụng công nghệ là rất quan trọng cho tương lai của sinh viên.",
+    "link": "https://dantri.com.vn/giao-duc/cong-nghe-la-co-hoi-nhung-ap-luc-nha-truong-phai-doi-moi-chuong-trinh-20250324091010560.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Công nghệ đã tác động như thế nào đến việc đổi mới chương trình đào tạo tại các trường học?",
+    "answers": [
+      {
+        "text": "Công nghệ là cơ hội và áp lực để các trường đổi mới chương trình đào tạo.",
+        "correct": true
+      },
+      {
+        "text": "Công nghệ không ảnh hưởng đến chương trình đào tạo.",
+        "correct": false
+      },
+      {
+        "text": "Công nghệ chỉ mang lại lợi ích cho sinh viên đã tốt nghiệp.",
+        "correct": false
+      },
+      {
+        "text": "Công nghệ không cần thiết trong giáo dục.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
     "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
     "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
@@ -1029,33 +1056,6 @@
     ]
   },
   {
-    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
-    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
-    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
-    "answers": [
-      {
-        "text": "Giữa tháng 3",
-        "correct": true
-      },
-      {
-        "text": "Đầu tháng 4",
-        "correct": false
-      },
-      {
-        "text": "Cuối tháng 2",
-        "correct": false
-      },
-      {
-        "text": "Giữa tháng 1",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 hiểu lầm thường gặp về đường",
     "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
     "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
@@ -1078,6 +1078,33 @@
       },
       {
         "text": "Chỉ ăn đường một lần trong ngày là an toàn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
+    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
+    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
+    "answers": [
+      {
+        "text": "Giữa tháng 3",
+        "correct": true
+      },
+      {
+        "text": "Đầu tháng 4",
+        "correct": false
+      },
+      {
+        "text": "Cuối tháng 2",
+        "correct": false
+      },
+      {
+        "text": "Giữa tháng 1",
         "correct": false
       }
     ]
@@ -1910,6 +1937,33 @@
     ]
   },
   {
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "answers": [
+      {
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "correct": true
+      },
+      {
+        "text": "Lễ hội mùa xuân",
+        "correct": false
+      },
+      {
+        "text": "Cuộc thi thể thao quốc gia",
+        "correct": false
+      },
+      {
+        "text": "Ngày Quốc tế Phụ nữ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -1963,33 +2017,6 @@
       },
       {
         "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
-    "answers": [
-      {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
-        "correct": true
-      },
-      {
-        "text": "Lễ hội mùa xuân",
-        "correct": false
-      },
-      {
-        "text": "Cuộc thi thể thao quốc gia",
-        "correct": false
-      },
-      {
-        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
@@ -2165,60 +2192,6 @@
     ]
   },
   {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
-    "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
-    "answers": [
-      {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
-        "correct": true
-      },
-      {
-        "text": "Để xây dựng một cầu mới.",
-        "correct": false
-      },
-      {
-        "text": "Để tổ chức lễ hội âm nhạc.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do an ninh quốc gia.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
-    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
-    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
-    "answers": [
-      {
-        "text": "Trở thành công an hoặc bác sĩ",
-        "correct": true
-      },
-      {
-        "text": "Trở thành họa sĩ",
-        "correct": false
-      },
-      {
-        "text": "Trở thành cầu thủ bóng đá",
-        "correct": false
-      },
-      {
-        "text": "Trở thành nhạc sĩ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
     "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
     "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
@@ -2268,6 +2241,60 @@
       },
       {
         "text": "Không có chương trình khuyến mãi nào",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
+    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
+    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
+    "answers": [
+      {
+        "text": "Trở thành công an hoặc bác sĩ",
+        "correct": true
+      },
+      {
+        "text": "Trở thành họa sĩ",
+        "correct": false
+      },
+      {
+        "text": "Trở thành cầu thủ bóng đá",
+        "correct": false
+      },
+      {
+        "text": "Trở thành nhạc sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "cat": "thoi-su",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "answers": [
+      {
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "correct": true
+      },
+      {
+        "text": "Để xây dựng một cầu mới.",
+        "correct": false
+      },
+      {
+        "text": "Để tổ chức lễ hội âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do an ninh quốc gia.",
         "correct": false
       }
     ]
@@ -3212,33 +3239,6 @@
     ]
   },
   {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -3265,6 +3265,33 @@
       },
       {
         "text": "Ung thư đại tràng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -3524,37 +3551,6 @@
       },
       {
         "text": "Mỹ không quan tâm đến nhà máy điện hạt nhân",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thí sinh khăn gói dự thi V-SAT đánh giá đầu vào đại học đầu tiên năm 2025",
-    "content": "Hôm nay, ngày 23/3/2025, kỳ thi V-SAT, đánh giá đầu vào đại học đầu tiên được tổ chức tại Hà Nội. Thí sinh từ nhiều tỉnh thành đã tham gia, trong đó có Cao Phương Ngọc từ Nghệ An, người đã đạt 136.5 điểm môn toán. Kỳ thi V-SAT áp dụng chương trình giáo dục phổ thông 2018, với nhiều môn thi và hình thức thi trắc nghiệm. Kỳ thi này mở ra cơ hội xét tuyển cho 19 trường đại học trên toàn quốc.",
-    "link": "https://dantri.com.vn/giao-duc/thi-sinh-khan-goi-du-thi-v-sat-danh-gia-dau-vao-dai-hoc-dau-tien-nam-2025-20250322231732234.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Kỳ thi V-SAT năm 2025 có gì đặc biệt?",
-    "answers": [
-      {
-        "text": "Đánh giá đầu vào cho 19 trường đại học",
-        "correct": true
-      },
-      {
-        "text": "Chỉ thi môn toán và lý",
-        "correct": false
-      },
-      {
-        "text": "Không có môn ngữ văn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tổ chức tại Hà Nội",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có một đợt thi duy nhất",
         "correct": false
       }
     ]
