Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Tuchel chê Rashford, Foden",
+    "content": "HLV Thomas Tuchel đã chỉ trích Marcus Rashford và Phil Foden vì không để lại ấn tượng trong trận thắng 2-0 của tuyển Anh trước Albania ở vòng loại World Cup 2026. Dù có chiến thắng trong trận ra mắt, Tuchel cho rằng đội bóng thiếu kỷ luật và hai cầu thủ này không tạo được ảnh hưởng như mong đợi. Ông hy vọng sẽ cải thiện tình hình trong những trận đấu tiếp theo và nhấn mạnh tầm quan trọng của việc tận dụng cơ hội từ những pha chạy chỗ.",
+    "link": "https://vnexpress.net/tuchel-che-rashford-foden-4865090.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao HLV Tuchel chê Rashford và Foden?",
+    "answers": [
+      {
+        "text": "Vì họ không để lại ấn tượng trong trận đấu",
+        "correct": true
+      },
+      {
+        "text": "Vì họ không ghi bàn",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không phòng ngự tốt",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không chạy nhanh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "TikToker dồn dập bị phụ nữ tố lừa đảo sau khi đăng bài truyền cảm hứng cho phụ nữ",
     "content": "TikToker N.N.A, người nổi bật với các video truyền cảm hứng cho phụ nữ, đã bị nhiều phụ nữ tố cáo về quá khứ lừa đảo liên quan đến đầu tư tiền ảo. Sau khi đăng một bài viết chia sẻ về hành trình sống và đầu tư, cô nhận được nhiều phản hồi tiêu cực, với nhiều người cho biết họ đã trở thành nạn nhân của những vụ lừa đảo mà cô và nhóm của cô thực hiện. Quỹ Dragon Capital cũng phải lên tiếng khẳng định họ không liên quan đến các hoạt động tài chính của N.N.A và nhấn mạnh cam kết của mình về tính minh bạch trong các hoạt động đầu tư.",
     "link": "https://tuoitre.vn/tiktoker-don-dap-bi-phu-nu-to-lua-dao-sau-khi-dang-bai-truyen-cam-hung-cho-phu-nu-20250324101413429.htm",
@@ -135,33 +162,6 @@
     ]
   },
   {
-    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
-    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
-    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
-    "answers": [
-      {
-        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
-        "correct": true
-      },
-      {
-        "text": "Cháo thịt, cơm trắng, bánh mì",
-        "correct": false
-      },
-      {
-        "text": "Thịt bò, cá, trứng",
-        "correct": false
-      },
-      {
-        "text": "Mì tôm, snack, kẹo",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
     "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
     "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
@@ -184,6 +184,33 @@
       },
       {
         "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
+    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
+    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
+    "answers": [
+      {
+        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
+        "correct": true
+      },
+      {
+        "text": "Cháo thịt, cơm trắng, bánh mì",
+        "correct": false
+      },
+      {
+        "text": "Thịt bò, cá, trứng",
+        "correct": false
+      },
+      {
+        "text": "Mì tôm, snack, kẹo",
         "correct": false
       }
     ]
@@ -1016,33 +1043,6 @@
     ]
   },
   {
-    "title": "4 hiểu lầm thường gặp về đường",
-    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
-    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
-    "answers": [
-      {
-        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
-        "correct": true
-      },
-      {
-        "text": "Đường tự nhiên không gây hại cho sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
     "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
     "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
@@ -1065,6 +1065,33 @@
       },
       {
         "text": "Giữa tháng 1",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 hiểu lầm thường gặp về đường",
+    "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
+    "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Có những hiểu lầm nào về đường mà mọi người thường mắc phải?",
+    "answers": [
+      {
+        "text": "Đường không chỉ có hại trong bánh kẹo và nước ngọt",
+        "correct": true
+      },
+      {
+        "text": "Đường tự nhiên không gây hại cho sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Cắt bỏ hoàn toàn đường khỏi chế độ ăn là cần thiết",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ăn đường một lần trong ngày là an toàn",
         "correct": false
       }
     ]
@@ -1897,28 +1924,28 @@
     ]
   },
   {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
+    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
+    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
+    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
+    "cat": "gia-dinh",
     "positivity": 8,
     "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
     "answers": [
       {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
         "correct": true
       },
       {
-        "text": "Lễ hội mùa xuân",
+        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
         "correct": false
       },
       {
-        "text": "Cuộc thi thể thao quốc gia",
+        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
         "correct": false
       },
       {
-        "text": "Ngày Quốc tế Phụ nữ",
+        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
         "correct": false
       }
     ]
@@ -1982,28 +2009,28 @@
     ]
   },
   {
-    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
-    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
-    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
-    "cat": "gia-dinh",
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
     "positivity": 8,
     "importance": 7,
-    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
     "answers": [
       {
-        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
         "correct": true
       },
       {
-        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
+        "text": "Lễ hội mùa xuân",
         "correct": false
       },
       {
-        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
+        "text": "Cuộc thi thể thao quốc gia",
         "correct": false
       },
       {
-        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
+        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
